--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "jshint add.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "jasmine": "^3.5.0"
   },
   "dependencies": {
-    "jasmine-node": "^3.0.0"
+    "jasmine-node": "^3.0.0",
+     "jshint": "^2.6.0"
   }
 }
