--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine"
-  },
+    "test": "./node_modules/.bin/jasmine-node spec"  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nerjib/demo.git"
@@ -21,6 +20,7 @@
     "jasmine": "^3.5.0"
   },
   "dependencies": {
-    "jasmine-node": "^3.0.0"
+    "jasmine-node": "^3.0.0",
+    "save-dev": "0.0.1-security"
   }
 }
