--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ language: node_js
 node_js:
   - node
 
+script:
+  - npm run lint
+  - npm run test:coveralls
+
+notifications:
+  email: false
+  
