--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint index.js",
+    "lint": "./node_modules/.bin/jasmine-node spec",
     "test": "./node_modules/.bin/jasmine-node spec"
      },
    
