--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,16 @@ language: node_js
 node_js:
   - node
 
+cache:
+  directories:
+  - node_modules
+before_install:
+- npm update
+install:
+- npm install
 script:
-  - npm run coveralls
+- npm test
+- npm run coveralls
   
 notifications:
   email: false
