--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/jasmine-node spec",
-    "test": "./node_modules/.bin/jasmine-node spec",
-    "coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nerjib/demo.git"
+    "lint": "eslint '**/*.js'",
+    "test": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "test1": "./node_modules/mocha/bin/mocha ./test/test*",
+    "test-travis": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- -R spec ./spec/*"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +17,7 @@
   "homepage": "https://github.com/nerjib/demo#readme",
   "devDependencies": {
     "coveralls": "^3.0.7",
+    "istanbul": "^0.4.5",
     "jasmine": "^3.5.0",
     "jest": "^24.9.0"
   },
