--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ before_install:
 - npm update
 install:
 - npm install
-script:
-- npm test
-- npm run coveralls
-  
+
+script: "npm run-script test-travis"
+
+
 notifications:
   email: false
   
